--- a/Geoinformatique_I/IP/Exercices_IP/S2_IP_exercice.ipynb
+++ b/Geoinformatique_I/IP/Exercices_IP/S2_IP_exercice.ipynb
@@ -42,10 +42,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "wkrwV1yvjW3-",
-        "outputId": "0032f6a1-52d8-4892-d933-edd1ff5d4b34",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0032f6a1-52d8-4892-d933-edd1ff5d4b34"
       },
       "outputs": [
         {
@@ -80,10 +80,10 @@
       "execution_count": 2,
       "metadata": {
         "id": "SkjaBcb-jW3_",
-        "outputId": "f3b29562-9152-443f-db65-315945829b31",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f3b29562-9152-443f-db65-315945829b31"
       },
       "outputs": [
         {
@@ -120,10 +120,10 @@
       "execution_count": 3,
       "metadata": {
         "id": "h1AnFjiKjW4A",
-        "outputId": "9238d8e4-b7f1-4514-eac6-52a43f6ea304",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9238d8e4-b7f1-4514-eac6-52a43f6ea304"
       },
       "outputs": [
         {
@@ -169,10 +169,10 @@
       "execution_count": 11,
       "metadata": {
         "id": "ploHyFu2jW4A",
-        "outputId": "159937d3-041b-484a-9799-37b40ba08b52",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "159937d3-041b-484a-9799-37b40ba08b52"
       },
       "outputs": [
         {
@@ -192,7 +192,7 @@
         "PlayListRating = [10, 9.5, 10, 8, 7.5, 5, 10, 10]\n",
         "\n",
         "# Astuce : Utilisez l'indexation de la liste comme critère (longueur de votre liste)\n",
-        "indx = 0\n",
+        "indx = 0  #ici on dit juste que l'index de la liste commence à 0, mais on aurait aussi pu dire qu'il commence à 1 si on voulait\n",
         "while indx < len(PlayListRating):\n",
         "  if PlayListRating[indx] < 6:\n",
         "    break\n",
@@ -204,7 +204,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "On utilise break pour dire qu'on a fini la boucle quand on a trouvé un nbr > 5"
+        "€€€ On utilise break pour dire qu'on a fini la boucle quand on a trouvé un nbr > 5"
       ],
       "metadata": {
         "id": "CYrr2HosMq2e"
@@ -221,17 +221,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
-        "id": "CIgtC_4zjW4A"
+        "id": "CIgtC_4zjW4A",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f2606c82-be6b-4969-c9b8-d2806cd4a244"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "9.5\n",
+            "10\n",
+            "8\n",
+            "7.5\n"
+          ]
+        }
+      ],
       "source": [
-        "for ____ in range(len(______________)):\n",
-        "  if _____________[____]<6:\n",
-        "    ____\n",
+        "for indx in range(len(PlayListRating)):\n",
+        "  if PlayListRating[indx]<6:\n",
+        "    break\n",
         "  else:\n",
-        "    print(_____________[____])"
+        "    print(PlayListRating[indx])"
       ]
     },
     {
@@ -245,15 +261,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "kh8TmInPjW4B"
+        "id": "kh8TmInPjW4B",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a42f505a-4abd-4a77-c3ba-17f9ba2c0bb1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['rouge', 'jaune', 'vert', 'violet', 'bleu']\n"
+          ]
+        }
+      ],
       "source": [
         "carres = [] # An empty list\n",
-        "for ___,___ in enumerate([_____________________]):\n",
-        "  carres.append(___) # Here you add (append) the elements one by one to the empty list\n",
+        "for index,couleur in enumerate(['rouge','jaune','vert', 'violet','bleu']): #en gros pour l'index de la liste 'couleur' dans laquelle on énumere les valeurs de 'couleur'\n",
+        "  carres.append(couleur) # Here you add (append) the elements one by one to the empty list\n",
         "\n",
         "print(carres)"
       ]
