--- a/Geoinformatique_I/IP/Exercices_IP/S2_IP_exercice.ipynb
+++ b/Geoinformatique_I/IP/Exercices_IP/S2_IP_exercice.ipynb
@@ -45,7 +45,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0032f6a1-52d8-4892-d933-edd1ff5d4b34"
+        "outputId": "eafa1569-329c-41f9-abbd-c4a4f30ae1e0"
       },
       "outputs": [
         {
@@ -83,7 +83,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f3b29562-9152-443f-db65-315945829b31"
+        "outputId": "f8fa19cd-c5cd-45d4-a3e7-19855962e8ef"
       },
       "outputs": [
         {
@@ -123,7 +123,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9238d8e4-b7f1-4514-eac6-52a43f6ea304"
+        "outputId": "456e772d-2383-4890-a73f-bbcd1c5f1172"
       },
       "outputs": [
         {
@@ -166,13 +166,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 8,
       "metadata": {
         "id": "ploHyFu2jW4A",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "159937d3-041b-484a-9799-37b40ba08b52"
+        "outputId": "7f861265-71f2-40c9-94fc-1e0fab6ced60"
       },
       "outputs": [
         {
@@ -193,12 +193,15 @@
         "\n",
         "# Astuce : Utilisez l'indexation de la liste comme critère (longueur de votre liste)\n",
         "indx = 0  #ici on dit juste que l'index de la liste commence à 0, mais on aurait aussi pu dire qu'il commence à 1 si on voulait\n",
-        "while indx < len(PlayListRating):\n",
-        "  if PlayListRating[indx] < 6:\n",
-        "    break\n",
-        "  else:\n",
+        "while indx < len(PlayListRating):  #tant que indx est plus petit que longeur liste -> on est dns boucle\n",
+        "  if PlayListRating[indx] < 6:      #si dans notre liste on prend la valeur en position de l'index (pex indx=2 on prend pos2) et qu'elle est plus basse que 6 alors on break ()\n",
+        "    break                           #sort de boucle si code éxecuté\n",
+        "  else:                             #si if pas représenté alors on rentre dns else\n",
         "    print(PlayListRating[indx])\n",
-        "    indx += 1"
+        "    indx += 1\n",
+        "\n",
+        "#for i in range(5):\n",
+        "  #print(i)"
       ]
     },
     {
@@ -221,13 +224,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 5,
       "metadata": {
         "id": "CIgtC_4zjW4A",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f2606c82-be6b-4969-c9b8-d2806cd4a244"
+        "outputId": "660e21f0-e8ba-4cab-eb26-e0cff0b2a082"
       },
       "outputs": [
         {
@@ -243,7 +246,7 @@
         }
       ],
       "source": [
-        "for indx in range(len(PlayListRating)):\n",
+        "for indx in range(len(PlayListRating)):  #ici la séquence est un rang (allant du début de la longueur de notre liste \"PlayListRating\" à la fin)\n",
         "  if PlayListRating[indx]<6:\n",
         "    break\n",
         "  else:\n",
@@ -261,26 +264,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 9,
       "metadata": {
         "id": "kh8TmInPjW4B",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a42f505a-4abd-4a77-c3ba-17f9ba2c0bb1"
+        "outputId": "c44a92a8-1044-4221-81b2-5739d606497b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['rouge', 'jaune', 'vert', 'violet', 'bleu']\n"
+            "[(0, 'rouge'), (1, 'jaune'), (2, 'vert'), (3, 'violet'), (4, 'bleu')]\n"
           ]
         }
       ],
       "source": [
         "carres = [] # An empty list\n",
-        "for index,couleur in enumerate(['rouge','jaune','vert', 'violet','bleu']): #en gros pour l'index de la liste 'couleur' dans laquelle on énumere les valeurs de 'couleur'\n",
+        "for couleur in enumerate(['rouge','jaune','vert', 'violet','bleu']): #en gros pour l'index de la liste 'couleur' dans laquelle on énumere les valeurs de 'couleur'\n",
         "  carres.append(couleur) # Here you add (append) the elements one by one to the empty list\n",
         "\n",
         "print(carres)"
