--- a/Geoinformatique_I/IP/Exercices_IP/S3_IP_exercice.ipynb
+++ b/Geoinformatique_I/IP/Exercices_IP/S3_IP_exercice.ipynb
@@ -104,7 +104,6 @@
         "# Relisez le fichier et ajoutez 3 nouvelles phrases : \"Je viens de me rappeler que pi vaut approximativement 3,1416\", \"Écrire ceci dans ce fichier\", \"est un jeu d'enfant !\"\n",
         "\n",
         "\n",
-        "\n",
         "with open('ans.txt', 'r+', encoding=\"utf-8\") as fhandler :           # avec(with) la fonction 'open' on va ouvrir & écrire ('r') dans le fichier nommé 'ans.txt', on utilise aussi le 'as' pour définir le fichier ouvert dans la variable nommée 'fhandler'\n",
         "    fhandler.write(\"ceci est mon premier exercice d'entrées-sorties\\n\")\n",
         "\n",
@@ -112,23 +111,23 @@
       ],
       "metadata": {
         "id": "yabSYQLFDM3r",
-        "outputId": "c4fb9e2c-6386-4626-8015-2098e518ce9e",
+        "outputId": "da1c4c01-7792-4e98-b428-d6ba71d6d8fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 228
         }
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'ans' is not defined",
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: 'ans.txt'",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-06d9830b6b4e>\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mans\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtxt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r+'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"utf-8\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfhandler\u001b[0m \u001b[0;34m:\u001b[0m           \u001b[0;31m#on utilise le with pour utiliser le open qui va nous permettre d'écrire à l'intérieur du fichier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mfhandler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ceci est mon premier exercice d'entrées-sorties\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'ans' is not defined"
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-1ee4ed3e5632>\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ans.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r+'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"utf-8\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfhandler\u001b[0m \u001b[0;34m:\u001b[0m           \u001b[0;31m# avec(with) la fonction 'open' on va ouvrir & écrire ('r') dans le fichier nommé 'ans.txt', on utilise aussi le 'as' pour définir le fichier ouvert dans la variable nommée 'fhandler'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mfhandler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ceci est mon premier exercice d'entrées-sorties\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'ans.txt'"
           ]
         }
       ]
@@ -191,13 +190,33 @@
     {
       "cell_type": "code",
       "source": [
-        "# Question 1 : Code libre"
+        "# Question 1 : Code libre\n",
+        "plus_treize = []\n",
+        "for nombre in range(1,11):\n",
+        "  plus_treize.append(nombre+13)\n",
+        "print(plus_treize)\n",
+        "\n",
+        "plus_treize_2 = [nombre^3 for nombre in range(20)]          #???bonne réponse?\n",
+        "print(plus_treize_2)"
       ],
       "metadata": {
-        "id": "9rC8X1BUEH0W"
+        "id": "9rC8X1BUEH0W",
+        "outputId": "f0c231d4-31b6-4096-908b-313d12da9042",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[14, 15, 16, 17, 18, 19, 20, 21, 22, 23]\n",
+            "[3, 2, 1, 0, 7, 6, 5, 4, 11, 10, 9, 8, 15, 14, 13, 12, 19, 18, 17, 16]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -217,12 +236,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "cellView": "form",
-        "id": "rULa9KmdT_YP"
+        "id": "rULa9KmdT_YP",
+        "outputId": "6daab05b-56ce-47a3-e0c6-64f45ff430f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[14, 15, 16, 17, 18, 19, 20, 21, 22, 23]\n"
+          ]
+        }
+      ],
       "source": [
         "#@title ##### Votre réponse devrait ressembler à ceci\n",
         "plus_treize = []\n",
@@ -246,7 +277,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "mmXUodKlT_YP"
       },
       "outputs": [],
@@ -309,12 +339,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Créez votre liste ici"
+        "# Créez votre liste ici\n",
+        "planètes = [\"mercure\",'venus','terre','mars','jupiter','saturne','uranus','neptune' ]"
       ],
       "metadata": {
         "id": "DNltWp69FsWP"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -342,15 +373,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "1RoEcKtCT_YU"
+        "id": "1RoEcKtCT_YU",
+        "outputId": "cdf27b41-0af5-4f7c-935a-dff17f289d1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n"
+          ]
+        }
+      ],
       "source": [
         "# Ecrivez votre code ici\n",
         "# Indice : utilisez la fonction len()\n",
-        "# Réponse : vous devriez obtenir un seul nombre de 8\n"
+        "# Réponse : vous devriez obtenir un seul nombre de 8\n",
+        "\n",
+        "print(len(planètes))"
       ]
     },
     {
@@ -377,13 +422,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "ZRfifPijT_YV"
+        "id": "ZRfifPijT_YV",
+        "outputId": "c4883b0c-fd4b-4ea4-c89c-0fe2813bc343",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['mercure', 'venus', 'terre', 'mars']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ecrivez votre code ici\n"
+        "# Ecrivez votre code ici\n",
+        "print(planètes[0:4])"
       ]
     },
     {
@@ -394,10 +452,27 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "znQBSaKRGGR5"
+        "id": "znQBSaKRGGR5",
+        "outputId": "7f3bc844-d33e-407a-ea26-09d1e39787f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 159
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name '____________________' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-17-affc60aa07f1>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#@title Code à compléter (au besoin)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0m____________________\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0m_\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name '____________________' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -410,11 +485,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "tAnWAybDT_YV"
+        "id": "tAnWAybDT_YV",
+        "outputId": "d74399a6-215d-4737-9fdb-5ba516c38ab5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "venus\n",
+            "mars\n",
+            "uranus\n"
+          ]
+        }
+      ],
       "source": [
         "# Ecrivez votre code ici\n",
         "# Astuce : Accéder à la dernière lettre de chaque planète (planet[-1]), imprimer le nom de la planète si la lettre est égale à \"s\", continuer la boucle sinon.\n",
@@ -422,7 +511,10 @@
         "# vénus\n",
         "# mars\n",
         "# uranus\n",
-        "\n"
+        "\n",
+        "for planet in planètes :\n",
+        "  if (planet[-1])=='s' :\n",
+        "    print(planet)\n"
       ]
     },
     {
@@ -983,7 +1075,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
