--- a/Geoinformatique_I/IP/Exercices_IP/S3_IP_exercice.ipynb
+++ b/Geoinformatique_I/IP/Exercices_IP/S3_IP_exercice.ipynb
@@ -114,7 +114,7 @@
         "outputId": "da1c4c01-7792-4e98-b428-d6ba71d6d8fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 228
+          "height": 245
         }
       },
       "execution_count": 4,
@@ -201,10 +201,10 @@
       ],
       "metadata": {
         "id": "9rC8X1BUEH0W",
-        "outputId": "f0c231d4-31b6-4096-908b-313d12da9042",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f0c231d4-31b6-4096-908b-313d12da9042"
       },
       "execution_count": 8,
       "outputs": [
@@ -240,10 +240,10 @@
       "metadata": {
         "cellView": "form",
         "id": "rULa9KmdT_YP",
-        "outputId": "6daab05b-56ce-47a3-e0c6-64f45ff430f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6daab05b-56ce-47a3-e0c6-64f45ff430f9"
       },
       "outputs": [
         {
@@ -345,7 +345,7 @@
       "metadata": {
         "id": "DNltWp69FsWP"
       },
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -376,10 +376,10 @@
       "execution_count": 12,
       "metadata": {
         "id": "1RoEcKtCT_YU",
-        "outputId": "cdf27b41-0af5-4f7c-935a-dff17f289d1a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cdf27b41-0af5-4f7c-935a-dff17f289d1a"
       },
       "outputs": [
         {
@@ -422,13 +422,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 10,
       "metadata": {
         "id": "ZRfifPijT_YV",
-        "outputId": "c4883b0c-fd4b-4ea4-c89c-0fe2813bc343",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "149f6622-0cd2-4f4f-f2e1-cdb1d49ef842"
       },
       "outputs": [
         {
@@ -453,11 +453,11 @@
       "metadata": {
         "cellView": "form",
         "id": "znQBSaKRGGR5",
-        "outputId": "7f3bc844-d33e-407a-ea26-09d1e39787f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 159
-        }
+        },
+        "outputId": "7f3bc844-d33e-407a-ea26-09d1e39787f8"
       },
       "execution_count": 17,
       "outputs": [
@@ -485,13 +485,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 6,
       "metadata": {
         "id": "tAnWAybDT_YV",
-        "outputId": "d74399a6-215d-4737-9fdb-5ba516c38ab5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "acc65507-7d2d-4c0d-aa32-8d7e83110ec3"
       },
       "outputs": [
         {
@@ -513,7 +513,7 @@
         "# uranus\n",
         "\n",
         "for planet in planètes :\n",
-        "  if (planet[-1])=='s' :\n",
+        "  if planet[-1]=='s' :\n",
         "    print(planet)\n"
       ]
     },
@@ -556,13 +556,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "uuooohJsT_YV"
+        "id": "uuooohJsT_YV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "48c185eb-0e58-45fe-99ca-65fb41905d0a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'mercure': 0.33, 'venus': 4.87, 'terre': 5.97, 'mars': 0.642, 'jupiter': 1898, 'saturne': 568, 'uranus': 86.8, 'neptune': 102}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ecrivez votre code ici\n"
+        "# Ecrivez votre code ici\n",
+        "dico_plan = {'mercure':0.330, 'venus':4.87, 'terre':5.97,'mars':0.642,'jupiter':1898,'saturne':568,'uranus':86.8,'neptune':102}\n",
+        "print(dico_plan)"
       ]
     },
     {
@@ -590,13 +604,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "3KOehZDmT_YV"
+        "id": "3KOehZDmT_YV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "32a5b714-73e6-47a2-937a-df9ac274a2ef"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5.97\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ecrivez votre code ici\n"
+        "# Ecrivez votre code ici\n",
+        "print(dico_plan[\"terre\"])"
       ]
     },
     {
@@ -623,15 +650,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "jun7xPViT_YV"
+        "id": "jun7xPViT_YV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4732faff-e598-4568-9b95-780d3214aec2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['jupiter', 'saturne', 'neptune']\n"
+          ]
+        }
+      ],
       "source": [
         "# Ecrivez votre code ici\n",
         "# Entre les crochets, vous accéderez aux noms (clés) de chaque entrée du dictionnaire.\n",
-        "# Vous devriez voir ceci : ['jupiter', 'saturne', 'nepturne']\n"
+        "# Vous devriez voir ceci : ['jupiter', 'saturne', 'nepturne']\n",
+        "big_planet = []\n",
+        "for planet in dico_plan :\n",
+        "  if dico_plan[planet]>100:\n",
+        "    big_planet.append(planet)\n",
+        "\n",
+        "print(big_planet)"
       ]
     },
     {
@@ -665,14 +710,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "GNSJ5hCaT_YW"
+        "id": "GNSJ5hCaT_YW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c80bb0b2-1706-4755-d329-2c42844cf96f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dict_keys(['mercure', 'venus', 'terre', 'mars', 'jupiter', 'saturne', 'uranus', 'neptune', 'pluton'])\n"
+          ]
+        }
+      ],
       "source": [
         "# Ecrivez votre code ici\n",
-        "# Vous devriez voir ceci : ['mercure', 'vénus', 'terre', 'mars', 'jupiter', 'saturne', 'uranus', 'nepturne', 'pluton']\n"
+        "# Vous devriez voir ceci : ['mercure', 'vénus', 'terre', 'mars', 'jupiter', 'saturne', 'uranus', 'nepturne', 'pluton']\n",
+        "dico_plan['pluton']=(0.0130)\n",
+        "print(dico_plan.keys())"
       ]
     },
     {
@@ -683,7 +742,6 @@
         "print(planetdict.keys())"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "rTZkFQ8DHvor"
       },
       "execution_count": null,
@@ -710,7 +768,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Écrivez votre code ici"
+        "# Écrivez votre code ici\n"
       ],
       "metadata": {
         "id": "qNx4b45wH2cq"
