--- a/Geoinformatique_I/IP/Exercices_IP/S3_IP_exercice.ipynb
+++ b/Geoinformatique_I/IP/Exercices_IP/S3_IP_exercice.ipynb
@@ -114,7 +114,7 @@
         "outputId": "da1c4c01-7792-4e98-b428-d6ba71d6d8fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 245
+          "height": 263
         }
       },
       "execution_count": 4,
@@ -556,13 +556,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "uuooohJsT_YV",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "48c185eb-0e58-45fe-99ca-65fb41905d0a"
+        "outputId": "146ee93a-8f66-4c2f-bcd5-1c1c2c725332"
       },
       "outputs": [
         {
@@ -604,13 +604,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "3KOehZDmT_YV",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "32a5b714-73e6-47a2-937a-df9ac274a2ef"
+        "outputId": "b598d4d7-018d-4035-aea1-3ba7688b45b4"
       },
       "outputs": [
         {
@@ -650,13 +650,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "id": "jun7xPViT_YV",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4732faff-e598-4568-9b95-780d3214aec2"
+        "outputId": "7276fa26-555a-4780-8bbe-20149cb761f8"
       },
       "outputs": [
         {
@@ -710,13 +710,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 5,
       "metadata": {
         "id": "GNSJ5hCaT_YW",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c80bb0b2-1706-4755-d329-2c42844cf96f"
+        "outputId": "ba7ade04-3522-4f77-a1bf-2187839c8b7f"
       },
       "outputs": [
         {
@@ -742,6 +742,7 @@
         "print(planetdict.keys())"
       ],
       "metadata": {
+        "cellView": "form",
         "id": "rTZkFQ8DHvor"
       },
       "execution_count": null,
@@ -768,12 +769,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Écrivez votre code ici\n"
+        "# Écrivez votre code ici\n",
+        "fruits = 'pomme','orange','kiwi','banane','mangue'"
       ],
       "metadata": {
         "id": "qNx4b45wH2cq"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -801,13 +803,33 @@
     {
       "cell_type": "code",
       "source": [
-        "# Écrivez votre code ici"
+        "# Écrivez votre code ici\n",
+        "fruits_selectionnes = []\n",
+        "for fruit in fruits:\n",
+        "  if len(fruit)>5:\n",
+        "    fruits_selectionnes.append(fruit)\n",
+        "  else :\n",
+        "    fruits_selectionnes.append('Non sélectionné')\n",
+        "\n",
+        "print(fruits_selectionnes)"
       ],
       "metadata": {
-        "id": "0nbjv4CeII9U"
+        "id": "0nbjv4CeII9U",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aad5ee8b-fe8c-4c0e-c810-05cf761c2d1f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Non sélectionné', 'orange', 'Non sélectionné', 'banane', 'mangue']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -843,13 +865,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# Écrivez votre code ici\n"
+        "# Écrivez votre code ici\n",
+        "produits = [(\"laptop\",800),(\"Smartphone\", 500), (\"Casque\", 30), (\"Tablette\", 120)]\n",
+        "print(produits)"
       ],
       "metadata": {
-        "id": "Do3XS-liJMEL"
+        "id": "Do3XS-liJMEL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fb5544a5-7e16-4b2f-db5c-09588ddf8270"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('laptop', 800), ('Smartphone', 500), ('Casque', 30), ('Tablette', 120)]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -876,13 +912,37 @@
     {
       "cell_type": "code",
       "source": [
-        "# Écrivez votre code ici\n"
+        "# Écrivez votre code ici\n",
+        "somme_prix = 0\n",
+        "index_paire = 0\n",
+        "for produit in produits:\n",
+        "  if produits[index_paire][1]>50:\n",
+        "    print(produit)\n",
+        "    index_paire = index_paire + 1\n",
+        "  else :\n",
+        "    print('Non sélectionné')\n",
+        "    index_paire = index_paire + 1"
       ],
       "metadata": {
-        "id": "UcOeP9qhJi-D"
+        "id": "UcOeP9qhJi-D",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0ae4406a-82a3-4c90-e3ac-53959ad900ff"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('laptop', 800)\n",
+            "('Smartphone', 500)\n",
+            "Non sélectionné\n",
+            "('Tablette', 120)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -931,12 +991,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Écrivez votre code ici\n"
+        "# Écrivez votre code ici\n",
+        "couleurs = ['rouge', 'vert', 'bleu', 'jaune', 'rouge', 'violet', 'vert']"
       ],
       "metadata": {
         "id": "e2nn-X1FJp1g"
       },
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -964,13 +1025,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# Écrivez votre code ici\n"
+        "# Écrivez votre code ici\n",
+        "couleurs_uniques = set(couleurs)\n",
+        "print(couleurs_uniques)"
       ],
       "metadata": {
-        "id": "gUX5O3_aJ33t"
+        "id": "gUX5O3_aJ33t",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "71579919-5e1a-4057-d879-1a22fe3e51bb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'rouge', 'vert', 'bleu', 'jaune', 'violet'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -998,13 +1073,30 @@
     {
       "cell_type": "code",
       "source": [
-        "# Écrivez votre code ici\n"
+        "# Écrivez votre code ici\n",
+        "couleurs_longues = []\n",
+        "for couleur in couleurs_uniques:\n",
+        "  if len(couleur)>5:\n",
+        "    couleurs_longues.append(couleur)\n",
+        "print(couleurs_longues)"
       ],
       "metadata": {
-        "id": "54qefWZcLDa2"
+        "id": "54qefWZcLDa2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f18000e9-ce89-41f3-afdb-449ba8ac5eb5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['violet']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1035,13 +1127,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {
         "id": "8l1n3pPJT_Yb"
       },
       "outputs": [],
       "source": [
-        "# Créez les deux listes avec 4 prénoms dans chaque liste\n"
+        "# Créez les deux listes avec 4 prénoms dans chaque liste\n",
+        "r1 = {'francis', 'maurice', 'bobby','shania'}\n",
+        "r2 = {'billy', 'bob','shania'}"
       ]
     },
     {
@@ -1070,13 +1164,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# Écrivez votre code ici\n"
+        "# Écrivez votre code ici\n",
+        "reussite_les_deux = r1.intersection(r2)\n",
+        "print(reussite_les_deux)"
       ],
       "metadata": {
-        "id": "qWytWsylLQjD"
+        "id": "qWytWsylLQjD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "af76fe44-1e30-4da9-c9fd-47198aec1b6d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'shania'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1103,13 +1211,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# Écrivez votre code ici\n"
+        "# Écrivez votre code ici\n",
+        "reussite_au_moins_un = r1.union(r2)\n",
+        "print(reussite_au_moins_un)"
       ],
       "metadata": {
-        "id": "LaeEmFEQLWqN"
+        "id": "LaeEmFEQLWqN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ca74f518-7408-4f13-810c-d03d38b74128"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'bobby', 'maurice', 'shania', 'francis', 'bob', 'billy'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
