--- a/Geoinformatique_I/IP/Exercices_IP/S4_IP_exercice.ipynb
+++ b/Geoinformatique_I/IP/Exercices_IP/S4_IP_exercice.ipynb
@@ -1522,10 +1522,13 @@
       "source": [
         "# Écrivez votre fonction ici\n",
         "def convert_mass_jupouterre(masseplanet = None, planetchoisie = None):\n",
-        "  if planetchoisie == 'jupiter':\n",
-        "    return masseplanet/planetdict['jupiter']\n",
-        "  if planetchoisie == 'terre':\n",
-        "    return masseplanet/planetdict['terre']\n",
+        "  #if planetchoisie == 'jupiter':\n",
+        "    #return masseplanet/planetdict['jupiter']\n",
+        "  #if planetchoisie == 'terre':\n",
+        "    #return masseplanet/planetdict['terre']\n",
+        "  #ou alors...\n",
+        "  return masseplanet/planetdict[planetchoisie]\n",
+        "\n",
         "\n",
         "print(convert_mass_jupouterre(planetdict['jupiter'],'terre'))\n",
         "print(convert_mass_jupouterre(planetdict['jupiter'],'jupiter'))\n",
@@ -1537,9 +1540,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fa089ad5-ce5e-4f26-84f2-340714dd3be5"
+        "outputId": "8e23b5df-fc32-4b5d-f907-b49331d0ddb6"
       },
-      "execution_count": 88,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "stream",
