--- a/Geoinformatique_I/IP/Exercices_IP/S5_IP_exercice.ipynb
+++ b/Geoinformatique_I/IP/Exercices_IP/S5_IP_exercice.ipynb
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Rl8QNA35ezyf"
       },
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "b7RY0ccXgTLa"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -153,7 +153,7 @@
       "metadata": {
         "id": "OyM0tXKfhI4W"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -196,7 +196,7 @@
           "height": 35
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -215,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "j7udqqZXezyh",
         "outputId": "4ca1fd20-9303-4b70-b095-09ed9db0e517",
@@ -305,18 +305,17 @@
       ],
       "metadata": {
         "id": "SA_etMQfjdlS",
-        "outputId": "644f0049-0402-43c0-8662-04c54fa1632b",
+        "outputId": "b4b6ba87-5efc-4b3f-d8e7-3570f867f08d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "mkdir: cannot create directory ‘projet_calc’: File exists\n",
             "/content\n"
           ]
         }
@@ -326,24 +325,25 @@
       "cell_type": "code",
       "source": [
         "# Étape 2\n",
-        "!%cd /content/projet_calc     #en gros j'étais dans content/ avant et je suis remtré dns le dossier projet_calc matn\n",
+        "#en gros j'étais dans content/ avant et je suis rentré dns le dossier projet_calc mtn\n",
+        "%cd /content/projet_calc/\n",
         "!pwd"
       ],
       "metadata": {
         "id": "mVmFPfN5jfM8",
-        "outputId": "0bfe09f0-a2d7-432f-834c-f2073df7002e",
+        "outputId": "9a362554-b998-4ea2-de4f-267b1879178f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/bin/bash: line 1: fg: no job control\n",
-            "/content\n"
+            "/content/projet_calc\n",
+            "/content/projet_calc\n"
           ]
         }
       ]
@@ -352,13 +352,36 @@
       "cell_type": "code",
       "source": [
         "# Étape 3\n",
+        "\n",
         "!git init"
       ],
       "metadata": {
-        "id": "Qq_69DMujgcL"
+        "id": "Qq_69DMujgcL",
+        "outputId": "aa0d13b6-2bc7-41b2-b3ea-7654aaf5f61d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[33mhint: Using 'master' as the name for the initial branch. This default branch name\u001b[m\n",
+            "\u001b[33mhint: is subject to change. To configure the initial branch name to use in all\u001b[m\n",
+            "\u001b[33mhint: of your new repositories, which will suppress this warning, call:\u001b[m\n",
+            "\u001b[33mhint: \u001b[m\n",
+            "\u001b[33mhint: \tgit config --global init.defaultBranch <name>\u001b[m\n",
+            "\u001b[33mhint: \u001b[m\n",
+            "\u001b[33mhint: Names commonly chosen instead of 'master' are 'main', 'trunk' and\u001b[m\n",
+            "\u001b[33mhint: 'development'. The just-created branch can be renamed via this command:\u001b[m\n",
+            "\u001b[33mhint: \u001b[m\n",
+            "\u001b[33mhint: \tgit branch -m <name>\u001b[m\n",
+            "Initialized empty Git repository in /content/projet_calc/.git/\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -388,12 +411,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Créer le fichier .py avec e.g., touch"
+        "# Créer le fichier .py avec e.g., touch\n",
+        "!touch calculatrice.py"
       ],
       "metadata": {
         "id": "EVmk3PrnkYd6"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -401,24 +425,42 @@
       "source": [
         "# Ajouter du contenu au fichier avec par exemple echo\n",
         "# Syntaxe: !echo \"text\" > calculatrice.py\n",
+        "!echo \"coucou toi\" > calculatrice.py\n",
+        "!git config --global user.email \"nicole@exemple.com\"\n",
+        "!git config --global user.name \"Niki\"\n",
         "# vous pouvez aussi directement naviguer et écrire dans le fichier"
       ],
       "metadata": {
         "id": "SGbwjvYXkdKk"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Effectuer le git commit"
+        "# Effectuer le git commit\n",
+        "!git commit -m \"ajout du fichier/doc python nommé 'calculatrice'\""
       ],
       "metadata": {
-        "id": "ff1uTk2Wklij"
+        "id": "ff1uTk2Wklij",
+        "outputId": "67cc7189-92ca-4cbd-d847-6b6a5f411300",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[master (root-commit) d28529f] ajout du fichier/doc python nommé 'calculatrice'\n",
+            " 1 file changed, 2 insertions(+)\n",
+            " create mode 100644 calculatrice.py\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -435,8 +477,7 @@
         "!git commit -m \"Ajout de la fonction addition\""
       ],
       "metadata": {
-        "id": "zEFBmMMYp0c5",
-        "cellView": "form"
+        "id": "zEFBmMMYp0c5"
       },
       "execution_count": null,
       "outputs": []
@@ -453,36 +494,52 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ajouter du code à votre fichier calculatrice.py, e.g., avec echo"
+        "# Ajouter du code à votre fichier calculatrice.py, e.g., avec echo\n",
+        "!echo \"test de nouveau commit mdrrrr\" >> calculatrice.py"
       ],
       "metadata": {
         "id": "PNJaH5eUqPzX"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Ajouter cette modification à l'index avec git add"
+        "# Ajouter cette modification à l'index avec git add\n",
+        "!git add calculatrice.py"
       ],
       "metadata": {
         "id": "Z5nUvJk2qVZC"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Effectuer un nouveau commit pour valider cette modification\n",
-        "# Écrire un message en utilisant l'argument (flag) -m"
+        "# Écrire un message en utilisant l'argument (flag) -m\n",
+        "!git commit -m \"ooooh un nouveau commit (commit2.0)\""
       ],
       "metadata": {
-        "id": "NkU3GWP8qYu2"
+        "id": "NkU3GWP8qYu2",
+        "outputId": "5536ce40-2f3a-47ef-b22b-82fc8b9f86ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "On branch master\n",
+            "nothing to commit, working tree clean\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -495,8 +552,7 @@
         "!git commit -m \"Ajout de la fonction soustraction\""
       ],
       "metadata": {
-        "id": "XIMycU5xqe8e",
-        "cellView": "form"
+        "id": "XIMycU5xqe8e"
       },
       "execution_count": null,
       "outputs": []
@@ -515,13 +571,30 @@
     {
       "cell_type": "code",
       "source": [
-        "# Afficher l'historique ici"
+        "# Afficher l'historique ici\n",
+        "!git log"
       ],
       "metadata": {
-        "id": "zBJ5LyJGq3ZW"
+        "id": "zBJ5LyJGq3ZW",
+        "outputId": "9dbc5655-b41d-4122-a8db-7b225015b677",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[33mcommit d28529fb1060a91177cc8ff0304f64503fb96aa2\u001b[m\u001b[33m (\u001b[m\u001b[1;36mHEAD -> \u001b[m\u001b[1;32mmaster\u001b[m\u001b[33m)\u001b[m\n",
+            "Author: Niki <nicole@exemple.com>\n",
+            "Date:   Sun Oct 27 13:54:28 2024 +0000\n",
+            "\n",
+            "    ajout du fichier/doc python nommé 'calculatrice'\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -535,24 +608,41 @@
     {
       "cell_type": "code",
       "source": [
-        "# Créer un fichier README.md pour documenter le projet"
+        "# Créer un fichier README.md pour documenter le projet\n",
+        "!touch readme.md"
       ],
       "metadata": {
         "id": "tYw8n-UtrANI"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# L'ajouter au suivi de Git et effectuer un commit"
+        "# L'ajouter au suivi de Git et effectuer un commit\n",
+        "!echo \"ce fichier documente le projet calculatrice\" > readme.md\n",
+        "!git add readme.md\n",
+        "!git commit -m \"ajout du beau fichier readme.md bhahaha\""
       ],
       "metadata": {
-        "id": "BCkzMvlErDCQ"
+        "id": "BCkzMvlErDCQ",
+        "outputId": "08c57e19-2c61-41bb-d4d4-d979217d4c6a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "On branch master\n",
+            "nothing to commit, working tree clean\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -565,7 +655,6 @@
         "!git commit -m \"Ajout du fichier README.md\""
       ],
       "metadata": {
-        "cellView": "form",
         "id": "-BNzgTxErHPn"
       },
       "execution_count": null,
@@ -596,24 +685,48 @@
       "cell_type": "code",
       "source": [
         "# N'oubliez pas d'utiliser votre \"GitHub handle ci-dessous\"\n",
-        "!git remote add origin https://github.com/votre-utilisateur/Projet_Calculatrice.git"
+        "!git remote add origin https://github.com/Nikivibe/test-de-nouveau-d-p-t-avc-collab-calculatrice-askip-"
       ],
       "metadata": {
-        "id": "nmPwaxbBrbrM"
+        "id": "nmPwaxbBrbrM",
+        "outputId": "7b885eba-3d2c-492e-d920-50706a57fca1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "error: remote origin already exists.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "!git push -u origin master"
+        "!git push -u https://github.com/Nikivibe/test-de-nouveau-d-p-t-avc-collab-calculatrice-askip- master"
       ],
       "metadata": {
-        "id": "y55X0yItriY0"
+        "id": "y55X0yItriY0",
+        "outputId": "6d18fbbb-715d-4fba-944e-72ec45c3b98e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: could not read Username for 'https://github.com': No such device or address\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -672,12 +785,19 @@
     {
       "cell_type": "code",
       "source": [
-        "# Écrire la fonction ici"
+        "# Écrire la fonction ici\n",
+        "def evaluation_qualite_air(AQI):\n",
+        "  if AQI <=50:\n",
+        "    return \"bonne\"\n",
+        "  if 51 <= AQI <=100:\n",
+        "      return \"modérée\"\n",
+        "  if AQI > 100:\n",
+        "    return \"mauvais\""
       ],
       "metadata": {
         "id": "TjVbJQDioQ2q"
       },
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -721,13 +841,35 @@
     {
       "cell_type": "code",
       "source": [
-        "# Écrire les tests ici"
+        "# Écrire les tests ici\n",
+        "%cd /content\n",
+        "import unittest\n",
+        "\n",
+        "class Testqualiteair(unittest.TestCase):\n",
+        "  def test_bonnequal(self):\n",
+        "    self.assertEqual(evaluation_qualite_air(30), \"bonne\")\n",
+        "  def test_moyennequal(self):\n",
+        "    self.assertEqual(evaluation_qualite_air(75), \"modérée\")\n",
+        "  def test_mauvaisequal(self):\n",
+        "    self.assertEqual(evaluation_qualite_air(150), \"mauvais\")\n"
       ],
       "metadata": {
-        "id": "c5t6YsrLpCGI"
+        "id": "c5t6YsrLpCGI",
+        "outputId": "ee7f7fd5-d774-4730-dd5b-50bb45c646a6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -773,10 +915,36 @@
         "unittest.main(argv=[''], exit=False)"
       ],
       "metadata": {
-        "id": "yt8nM3aUpZ-j"
+        "id": "yt8nM3aUpZ-j",
+        "outputId": "3c9f7c18-4d24-4e42-8976-35b41ae59889",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "...\n",
+            "----------------------------------------------------------------------\n",
+            "Ran 3 tests in 0.010s\n",
+            "\n",
+            "OK\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<unittest.main.TestProgram at 0x784d07a84f70>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
     },
     {
       "cell_type": "markdown",
